Fix: Fixed horizontal scrolling.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
+html{
+    overflow-x: hidden;
+  }
+
 body {
     font-family: "roboto", sans-serif;
 }
